Version 1.0.1
-------------------------------------------------------------------------

NEW FEATURES

* The LLL algorithm is now implemented as LLL().  (Thanks to Rudy Yoshida
  for the request.)

CHANGES

* Citation is now requested upon loading. Package startup messages are
  indented for prettier printing in algstat (consistent with latter).


Version 1.0.0
-------------------------------------------------------------------------

NEWS

* First CRAN version.