@@ -1,7 +1,7 @@
 Package: m2r
 Type: Package
 Title: Macaulay2 in R
-Version: 1.0.0.902
+Version: 1.0.0.903
 Authors@R: c(person("David", "Kahle", email = "david.kahle@gmail.com", role = c("aut", "cph", "cre")),
   person("Christopher", "O'Neill", email = "musicman3320@gmail.com", role = c("aut", "cph")),
   person("Jeff", "Sommars", email = "sommars1@uic.edu", role = c("aut", "cph")))
@@ -22,5 +22,6 @@ SystemRequirements:
 Suggests:
     knitr,
     rmarkdown,
+    microbenchmark,
     testthat
 RoxygenNote: 6.0.1
